# SolveX

./: .gitattributes  Makefile  README.md  compose.yml  package-lock.json
.devcontainer/: devcontainer.json
backend/: .env.development  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: __init__.py  dashboard.py  health.py  problems.py  relations.py  resources.py  solutions.py  tags.py  users.py  utils.py
backend/src/api/schemas/: __init__.py  base.py  dashboard.py  problems.py  relations.py  resources.py  solutions.py  tags.py  users.py
backend/src/api/services/: problems.py  resources.py
backend/src/db/: connection.py  errors.py  init_db.py  models.py  schema.sql  session.py
backend/src/db/fake/: load_tables.py
backend/src/db/fake/tables/: problem_relations.csv  problem_resources.csv  problem_tags.csv  problems.csv  resource_tags.csv  resources.csv  solution_resources.csv  solutions.csv  tags.csv  users.csv
docs/: STYLE_GUIDE.md  api.md  background.md
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/.devcontainer/: devcontainer.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/login/: page.tsx
frontend/app/problems/: page.tsx
frontend/app/resources/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/features/: ProblemCard.tsx
frontend/lib/: auth.ts
frontend/types/: models.ts
report/: Makefile  team-33-final-project-documentation.typ
(+9 files in other folders)
